--- a/pom.xml
+++ b/pom.xml
@@ -75,5 +75,11 @@
             <artifactId>paranamer</artifactId>
             <version>2.5.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
     </dependencies>
 </project>
