--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,11 @@
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.9</version>
+        </dependency>
     </dependencies>
 </project>
