--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,11 @@
             <artifactId>hsqldb</artifactId>
             <version>2.2.9</version>
         </dependency>
+
+        <dependency>
+        	<groupId>log4j</groupId>
+        	<artifactId>log4j</artifactId>
+        	<version>1.2.16</version>
+        </dependency>
     </dependencies>
 </project>
