--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
         </dependency>
 
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.25</version>
+        </dependency>
+
+        <dependency>
         	<groupId>log4j</groupId>
         	<artifactId>log4j</artifactId>
         	<version>1.2.16</version>
